--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "file metadata microservice - freecodecamp project",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+     "start": "node app.js"
   },
   "author": "Phuong Dang",
   "license": "ISC",
